2006-01-22  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* ly/music-functions-init.ly (parallelMusic): new music function for parallel
	music entry.

	* scm/define-music-properties.scm (all-music-properties): new 'void music property

	* scm/music-functions.scm (ly:music-message): make public, to be
	used in music function definitions

	* scm/lily-library.scm (collect-music-for-book): discard music
	when the 'void property is set.

2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (LY_DEFINE): store name before destroying face.

	* mf/GNUmakefile: idem.

	* buildscripts/mf-to-table.py (help): excise fetaXXlist.ly support.

	* stepmake/bin/install.py (dest): Only chmod/chown just created directories

	* Documentation/user/notation-appendices.itely (The Feta font):
	use it.

	* input/test/font-table.ly: new file. Generate font table within lily.

	* Documentation/user/notation-appendices.itely (The Feta font):
	use new font-table.ly file. 

	* stepmake/stepmake/install-out-targets.make
	(local-install-outfiles): only create directory if
	$(INSTALLATION_OUT_DIR) is defined. This fixes install on Gentoo.

2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (LY_DEFINE): new function ly:font-glyph-list.

	* VERSION (PACKAGE_NAME): release 2.7.28

	* scm/framework-ps.scm (write-preamble): use it to pick exactly
	the right font from a Mac dfont.
	(write-preamble): don't forget directory, only look at files.

	This fixes problems with TTF files in dfonts that don't match
	their PostScript names.
	 
	* lily/ttf.cc (LY_DEFINE): ly:ttf-ps-name: new routine to extract
	PS name from TTF font.

	* input/regression/tie-manual.ly: document new feature.

	* Documentation/topdocs/NEWS.tely (Top): add tie NEWS.

	* VERSION (MY_PATCH_LEVEL): bump to .28

	* Documentation/user/basic-notation.itely (Ties): add tie examples
	refs.

	* lily/tie-formatting-problem.cc (score_ties_configuration):
	symmetry penalties for outer ties.
